@@ -1,6 +1,8 @@
 package com.micosoft.taskappbackendmv.tasks;
 
 import com.micosoft.taskappbackendmv.errors.NotFoundException;
+import com.micosoft.taskappbackendmv.subtasks.SubTask;
+import com.micosoft.taskappbackendmv.tags.Tags;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -11,7 +13,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.time.LocalDate;
 import java.time.Month;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 
@@ -26,86 +28,98 @@ class TaskServiceTest {
     @InjectMocks
     TaskService taskService;
     Task task;
-    Long taskId=1L;
-    List<String> tag=new ArrayList<>();
-    List<String> tagsList= Arrays.asList("Work","Emergency");
-    List<String> newTagsList= Arrays.asList("Hobbies","Emergency");
-
-
-    Task updateTask= task= Task.builder().taskId(1L)
+    Long taskId = 1L;
+    List<String> tag = new ArrayList<>();
+    Tags tagInstance = new Tags(1L, "Emergency", "#ffff", null);
+    Tags newTagInstance = new Tags(1L, "Emergency updates", "#ffff", null);
+    SubTask subTask = new SubTask(1L, "Something", false, task);
+    List<SubTask> subTaskList = new ArrayList<>(List.of(subTask));
+    Collection<Tags> tagsList = new ArrayList<>(List.of(tagInstance));
+    Collection<Tags> newTagsList = new ArrayList<>(List.of(newTagInstance));
+    Task updateTask = Task.builder().taskId(1L)
             .taskTitle("Create something Else")
-            .tags(newTagsList)
-
+            .tags(newTagsList).subTasks(null)
             .tasKDescription("Some description else")
             .dueDate(LocalDate.of(2019, Month.FEBRUARY, 27))
-           .build();
+            .build();
+
     @BeforeEach
     void setUp() {
-        tag.addAll(tagsList);
-        task= Task.builder().taskId(1L).taskTitle("Create something").tags(tagsList).tasKDescription("Some description").dueDate(LocalDate.of(2019, Month.FEBRUARY, 20)).build();
+        task = Task.builder().taskId(1L)
+                .subTasks(subTaskList)
+                .taskTitle("Create something")
+                .tags(tagsList)
+                .tasKDescription("Some description").
+                dueDate(LocalDate.of(2019, Month.FEBRUARY, 20)).build();
     }
+
     @Test
-    void gettingTaskList(){
+    void gettingTaskList() {
         taskService.getTasks();
         verify(taskRepository).findAll();
     }
+
     @Test
-    void gettingTaskByIdWhenTaskExists(){
+    void gettingTaskByIdWhenTaskExists() {
         when(taskRepository.existsById(taskId)).thenReturn(true);
         when(taskRepository.findById(taskId)).thenReturn(Optional.of(task));
-        assertThat( taskService.getTask(taskId)).isNotNull();
+        assertThat(taskService.getTask(taskId)).isNotNull();
     }
+
     @Test
-    void gettingTaskWhenTasKDoesNotExist(){
+    void gettingTaskWhenTasKDoesNotExist() {
         when(taskRepository.existsById(taskId)).thenReturn(false);
-        assertThrows(NotFoundException.class,()->taskService.getTask(taskId));
+        assertThrows(NotFoundException.class, () -> taskService.getTask(taskId));
     }
+
     @Test
-    void creatingTaskWhenTaskExists(){
+    void creatingTaskWhenTaskExists() {
         when(taskRepository.existsById(taskId)).thenReturn(true);
-        assertThrows(NotFoundException.class,()->taskService.createTask(task));
+        assertThrows(NotFoundException.class, () -> taskService.createTask(task));
         verify(taskRepository, never()).save(any());
     }
+
     @Test
-    void  creatingTaskWhenTaskDoesNotExist(){
+    void creatingTaskWhenTaskDoesNotExist() {
         when(taskRepository.existsById(taskId)).thenReturn(false);
         taskService.createTask(task);
         verify(taskRepository).save(task);
     }
+
     @Test
-    void  deletingTaskThatExist(){
-        when(taskRepository.existsById(taskId)).thenReturn(true);taskService.deleteTask(taskId);
+    void deletingTaskThatExist() {
+        when(taskRepository.existsById(taskId)).thenReturn(true);
+        taskService.deleteTask(taskId);
         assertThat(taskService.deleteTask(taskId)).isNotEmpty();
     }
+
     @Test
-    void  deletingTaskThatDoesNotExist(){
+    void deletingTaskThatDoesNotExist() {
         when(taskRepository.existsById(taskId)).thenReturn(false);
-        assertThrows(NotFoundException.class, ()->taskService.deleteTask(taskId));
+        assertThrows(NotFoundException.class, () -> taskService.deleteTask(taskId));
     }
+
     @Test
-    void updateTaskThatDoesNotExist(){
+    void updateTaskThatDoesNotExist() {
 
         when(taskRepository.findById(taskId)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class,()->taskService.updateTask(taskId, updateTask));
+        assertThrows(NotFoundException.class, () -> taskService.updateTask(taskId, updateTask));
 
     }
+
     @Test
-    void updateTaskThatExists(){
+    void updateTaskThatExists() {
         when(taskRepository.findById(taskId)).thenReturn(Optional.of(task));
         when(taskRepository.save(task)).thenReturn(task);
-        Task result=taskService.updateTask(taskId, updateTask);
+        Task result = taskService.updateTask(taskId, updateTask);
         assertAll(
-                ()->assertEquals(updateTask.getTaskTitle(),result.getTaskTitle()),
-                ()->assertEquals(updateTask.getTasKDescription(),result.getTasKDescription()),
-                ()->assertEquals(updateTask.getTags(),result.getTags()),
-                ()->assertEquals(updateTask.getDueDate(),result.getDueDate())
+                () -> assertEquals(updateTask.getTaskTitle(), result.getTaskTitle()),
+                () -> assertEquals(updateTask.getTasKDescription(), result.getTasKDescription()),
+                () -> assertEquals(updateTask.getTags(), result.getTags()),
+                () -> assertEquals(updateTask.getDueDate(), result.getDueDate())
         );
 
     }
-
-
-
-
 
 
 }
